--- a/solutions/Day03/hello-react/src/index.css
+++ b/solutions/Day03/hello-react/src/index.css
@@ -1,13 +1,22 @@
+html,
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-size: 16px;
+  box-sizing: border-box;
+  margin: 0rem;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+header {
+  background-color: cornflowerblue;
+  padding: 1.5rem;
+  line-height: 1.5rem;
+}
+
+main {
+  background-color: lightgrey;
+  padding: 0.5rem;
+}
+
+footer {
+  background-color: cornflowerblue;
+  padding: 0.5rem;
 }
